# pndc_mining_stays_on

./: README.md  mining_config.json  pyproject.toml
src/: config.py  db_utils.py  minepond.py  miner_config.py  pymacwindow.py  utils.py
